// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 1`] = `
Object {
  "key": "projects/12345/locations/us-east1/functions/abcdef12345",
  "type": "google_cloud_function",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 2`] = `
Object {
  "key": "organizations/abcdef12345",
  "type": "google_cloud_organization",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 3`] = `
Object {
  "key": "folders/abcdef12345",
  "type": "google_cloud_folder",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 4`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 5`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 6`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 7`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 8`] = `
Object {
  "key": "cloudrun_service:abcdef12345",
  "type": "google_cloud_run_service",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 9`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 10`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 11`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 12`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 13`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/backendBuckets/abcdef12345",
  "type": "google_compute_backend_bucket",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 14`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/backendServices/abcdef12345",
  "type": "google_compute_backend_service",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 15`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 16`] = `
Object {
  "key": "disk:abcdef12345",
  "type": "google_compute_disk",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 17`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 18`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/firewalls/abcdef12345",
  "type": "google_compute_firewall",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 19`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 20`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/healthChecks/abcdef12345",
  "type": "google_compute_health_check",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 21`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 22`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 23`] = `
Object {
  "key": "image:abcdef12345",
  "type": "google_compute_image",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 24`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/zones/us-east3/instances/abcdef12345",
  "type": "google_compute_instance",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 25`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/zones/us-east3/instanceGroups/abcdef12345",
  "type": "google_compute_instance_group",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 26`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/regions/us-east2/instanceGroups/abcdef12345",
  "type": "google_compute_instance_group",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 27`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 28`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 29`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 30`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 31`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 32`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 33`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/networks/abcdef12345",
  "type": "google_compute_network",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 34`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 35`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 36`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 37`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345",
  "type": "google_compute_project",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 38`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 39`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 40`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 41`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 42`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 43`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 44`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 45`] = `
Object {
  "key": "snapshot:abcdef12345",
  "type": "google_compute_snapshot",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 46`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 47`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/sslPolicies/abcdef12345",
  "type": "google_compute_ssl_policy",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 48`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/regions/us-east2/subnetworks/abcdef12345",
  "type": "google_compute_subnetwork",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 49`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/targetHttpProxies/abcdef12345",
  "type": "google_compute_target_http_proxy",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 50`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/targetHttpsProxies/abcdef12345",
  "type": "google_compute_target_https_proxy",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 51`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 52`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 53`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 54`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/targetSslProxies/abcdef12345",
  "type": "google_compute_target_ssl_proxy",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 55`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 56`] = `
Object {
  "key": "https://www.googleapis.com/compute/projects/12345/global/urlMaps/abcdef12345",
  "type": "google_compute_url_map",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 57`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 58`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 59`] = `
Object {
  "key": "apps/abcdef12345",
  "type": "google_app_engine_application",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 60`] = `
Object {
  "key": "apps/APP/services/abcdef12345",
  "type": "google_app_engine_service",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 61`] = `
Object {
  "key": "apps/APP/services/abcdef12345/versions/abcdef12345",
  "type": "google_app_engine_version",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 62`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 63`] = `
Object {
  "key": "bucket:abcdef12345",
  "type": "google_storage_bucket",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 64`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 65`] = `
Object {
  "key": "abcdef12345",
  "type": "google_dns_managed_zone",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 66`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 67`] = `
Object {
  "key": "projects/12345/instances/abcdef12345",
  "type": "google_spanner_instance",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 68`] = `
Object {
  "key": "projects/12345/instances/abcdef12345/databases/abcdef12345",
  "type": "google_spanner_database",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 69`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 70`] = `
Object {
  "key": "12345:abcdef12345",
  "type": "google_bigquery_dataset",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 71`] = `
Object {
  "key": "12345:abcdef12345:abcdef12345",
  "type": "google_bigquery_table",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 72`] = `
Object {
  "key": false,
  "type": "google_iam_role",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 73`] = `
Object {
  "key": "abcdef12345",
  "type": "google_iam_service_account",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 74`] = `
Object {
  "key": "projects/12345/serviceAccounts/abcdef12345/keys/abcdef12345",
  "type": "google_iam_service_account_key",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 75`] = `
Object {
  "key": "projects/12345/topics/abcdef12345",
  "type": "google_pubsub_topic",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 76`] = `
Object {
  "key": "projects/12345/subscriptions/abcdef12345",
  "type": "google_pubsub_subscription",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 77`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 78`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 79`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 80`] = `
Object {
  "key": "projects/12345/locations/us-east1/keyRings/abcdef12345",
  "type": "google_kms_key_ring",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 81`] = `
Object {
  "key": "projects/12345/locations/us-east1/keyRings/abcdef12345/cryptoKeys/abcdef12345",
  "type": "google_kms_crypto_key",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 82`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 83`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 84`] = `
Object {
  "key": "https://www.googleapis.com/container/projects/12345/zones/us-east3/clusters/abcdef12345",
  "type": "google_container_cluster",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 85`] = `
Object {
  "key": "https://www.googleapis.com/container/projects/12345/locations/us-east1/clusters/abcdef12345",
  "type": "google_container_cluster",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 86`] = `
Object {
  "key": "https://www.googleapis.com/container/projects/12345/zones/us-east3/clusters/abcdef12345/nodePools/abcdef12345",
  "type": "google_container_node_pool",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 87`] = `
Object {
  "key": false,
  "type": "DO_SOMETHING_DIFFERENT_FOR_SQL_INSTANCES",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 88`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 89`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 90`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 91`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 92`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 93`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 94`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 95`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 96`] = `
Object {
  "key": "projects/67890/services/abcdef12345",
  "type": "google_cloud_api_service",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 97`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 98`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 99`] = `
Object {
  "key": "google_logging_log_sink:abcdef12345",
  "type": "google_logging_project_sink",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 100`] = `
Object {
  "key": "google_logging_log_sink:abcdef12345",
  "type": "google_logging_project_sink",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 101`] = `
Object {
  "key": "google_logging_log_sink:abcdef12345",
  "type": "google_logging_project_sink",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 102`] = `
Object {
  "key": "google_logging_log_sink:abcdef12345",
  "type": "google_logging_project_sink",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 103`] = `
Object {
  "key": "abcdef12345",
  "type": "google_logging_metric",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 104`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 105`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 106`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 107`] = `
Object {
  "key": "projects/12345/locations/us-east1/caPools/abcdef12345/certificateAuthorities/abcdef12345",
  "type": "google_privateca_certificate_authority",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 108`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 109`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 110`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 111`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 112`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 113`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 114`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 115`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 116`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 117`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 118`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 119`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 120`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 121`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 122`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 123`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 124`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 125`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 126`] = `
Object {
  "key": "projects/67890/locations/us-east1/apis/abcdef12345",
  "type": "google_api_gateway_api",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 127`] = `
Object {
  "key": "projects/67890/locations/us-east1/apis/abcdef12345/configs/abcdef12345",
  "type": "google_api_gateway_api_config",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 128`] = `
Object {
  "key": "projects/67890/locations/us-east1/gateways/abcdef12345",
  "type": "google_api_gateway_gateway",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 129`] = `
Object {
  "key": "redis:abcdef12345",
  "type": "google_redis_instance",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 130`] = `
Object {
  "key": "memcached:abcdef12345",
  "type": "google_memcache_instance",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 131`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 132`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 133`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 134`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 135`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 136`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 137`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 138`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 139`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 140`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 141`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 142`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 143`] = `
Object {
  "key": "projects/67890/policies/abcdef12345",
  "type": "google_monitoring_alert_policy",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 144`] = `
Object {
  "key": undefined,
  "type": "NO_DIRECT_J1_RESOURCE_YET",
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 145`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 146`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 147`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 148`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 149`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 150`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 151`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 152`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 153`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;

exports[`getTypeAndKeyFromResourceIdentifier should find the correct keys for all available resources 154`] = `
Object {
  "key": undefined,
  "type": undefined,
}
`;
